# sdl3_cmake_vscode_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: FindGLM.cmake
src/: defs.h
src/base/: app.h
src/standalone/: main.cpp
